--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,14 @@ services:
     ports:
       - "6379:6379"
 
+  front:
+    build:
+      context: .
+      dockerfile: Dockerfile.front
+    ports:
+      - "5173:5173"
+    depends_on:
+      - web
+
 volumes:
   pgdata:
